# valkyrie-runtime

./: Cargo.toml
.github/workflows/: rust.yml
projects/effects/: Cargo.toml
projects/effects/src/: lib.rs
projects/effects/tests/: array.md  component.wat  control.wat  kont.wat  main.rs  module.wat  yield.md  yield.wat
projects/runtime/: Cargo.toml
projects/runtime/src/: lib.rs
projects/runtime/src/host/: mod.rs
projects/runtime/src/vm/: building.rs  mod.rs
projects/runtime/tests/: catch.wat  component.wat  funcref.wat  main.rs  switch.wat  v-table.wat  yield.md  yield.wat
projects/runtime/wit/: world.wit
