[package]
name = "nyar-runtime"
version = "0.0.1"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
description = "nyar customized wasi runtime"
repository = "https://github.com/oovm/vcc"
documentation = "https://docs.rs/nyar-runtime"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
anyhow = "1.0.*"
wat = "1.208.1"

[dependencies.wasmtime]
version = "*"
features = ["async", "component-model", "gc", "wasmfx_baseline"]
git = "https://github.com/wasmfx/wasmfxtime"

[dependencies.wasmtime-wasi]
version = "*"
features = []
git = "https://github.com/wasmfx/wasmfxtime"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
